[tool.poetry]
name = "spotcli"
version = "0.1.0"
description = "A command-line tool for Spotify"
authors = ["Joe Bonneau <joebonneau@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.18.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
